--- a/.github/workflows/example-init.yaml
+++ b/.github/workflows/example-init.yaml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
+      packages: read
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
