--- a/.github/workflows/example-init.yaml
+++ b/.github/workflows/example-init.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: wait 10s
-        run: sleep 10
+      - name: gh token claims
+        run: echo ${{ secrets.GITHUB_TOKEN }} | jq -R 'split(".") | .[0],.[1] | @base64d | fromjson'
 
       - name: check permissions
         run: |
