--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions: 
+      contents: read
+      id-token: write
+      packages: read
     steps:
       - name: Print variables
         shell: bash
